[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_toolkit-nobel"
version = "0.1.0"
description = "Utilities for git and review helping."
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "Nurul Islam Nobel", email = "nobelnurulislam@gmail.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Project runtime dependencies
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "GitPython==3.1.45",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "langchain>=1.2.8",
]

[project.scripts]
ai-toolbox = "ai_toolkit.main:cli"

[project.urls]
Homepage = "https://github.com/Nobel-ruettt/ai_toolkit_langgraph"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
